# oxdna-trajectory-reader

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
example/: traj2mat.py
oxdna_trajectory_reader/: __init__.py  configuration.py  oxdna_trajectory_reader.pyi  topology.py  trajectory.py
src/: lib.rs
