[package]
name = "oxdna_trajectory_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxdna_trajectory_reader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.23.1"
numpy = "0.23.0"
rayon = "1.10.0"
