[package]
name = "oxdna_trajectory_reader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxdna_trajectory_reader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }
numpy = "0.27.1"
rayon = "1.10.0"
